--- a/style.css
+++ b/style.css
@@ -83,7 +83,10 @@
 
 /* projects */
 
-
+a{
+    color: #fff;
+    text-decoration-line: none;
+}
    /* Remove rounded borders from list */
 .list-group-item:first-child {
   border-top-right-radius: 0;
@@ -120,10 +123,11 @@
 }
 
 /* On hover, the color of .btn will transition to white with black text */
-.btn:hover, .btn:focus {
+.btn:hover, .btn:focus a{
   border: 1px solid #333;
   background-color: #fff;
   color: #000;
+  text-decoration-line:none;
 } 
 
 
